# ChangeLog for sci-mathematics/dataplot
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225-r1.ebuild:
  Add DEPEND on dev-util/pkgconfig since it is used in the autotools stuff.

  30 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  -dataplot-20080225.ebuild, +dataplot-20080225-r1.ebuild:
  Oops, forgot to revbump for new ghostscript(gs) USE flag

  30 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  +files/90dataplot, dataplot-20080225.ebuild:
  Add env.d file for dataplot. Necessary for startup file location, env
  variable, and

  30 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild, +files/dpsrc-datadir-20080225.patch,
  +files/dpsrc-maxobvvalue-20080225.patch,
  files/dpsrc-patchset-20080225.patch,
  +files/dpsrc-dp1patches-20080225.patch, +files/Makefile.am,
  +files/configure.ac:
  Many changes. Add parallel build support, using autotools. Add GhostScript
  support. Many many thanks to bicatali for helping with the autofoo and other
  general pointers.

  30 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild:
  Only do built_with_use check if USE='gd'

  19 Apr 2008; Thomas Anderson <gentoofan23@gentoo.org>
  dataplot-20080225.ebuild:
  Move -I/usr/include/GL from `use gd` conditional to `use gl`

  16 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild:
  Various style fixes from bicatali

  14 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild:
  Make DESCRIPTION a little nicer and more accurate

  12 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  dataplot-20080225.ebuild:
  Use alphabetical order

  12 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild: